--- a/package.json
+++ b/package.json
@@ -30,8 +30,13 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
+    "express-jwt": "^8.4.1",
+    "express-oauth2-jwt-bearer": "^1.4.0",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.0.1",
     "passport": "^0.6.0",
+    "passport-auth0": "^1.4.3",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
