--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.3.5",
     "dotenv": "^16.0.3",
+    "express-oauth2-jwt-bearer": "^1.4.1",
+    "jsonwebtoken": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
