--- a/package.json
+++ b/package.json
@@ -23,14 +23,12 @@
     "@nestjs/common": "^9.4.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.2",
-    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.3.5",
-    "bcrypt": "^5.1.0",
+    "depcheck": "^1.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.4.0",
-    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
