Add webpack to package.json

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express-oauth2-jwt-bearer": "^1.4.0",
     "mongoose": "^7.0.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "webpack": "^5.80.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
