--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
     "axios": "^1.3.5",
     "depcheck": "^1.4.3",
     "dotenv": "^16.0.3",
@@ -55,8 +56,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^4.7.4",
-    "@nestjs/swagger": "^5.1.0"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
