--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.4.0",
     "mongoose": "^7.0.3",
+    "openai": "^3.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "webpack": "^5.80.0"
